tgthrProgramManagement/force-app/main/default/objects/PublicComplaint/fields/Emergency_Services_Details__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Services_Details__c</fullName>
    <description>Details about emergency services involvement (which agencies responded, badge numbers, report numbers, etc.)</description>
    <inlineHelpText>Provide details: which agencies responded, officer names/badge numbers, report numbers, actions taken.</inlineHelpText>
    <label>Emergency Services Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>