tgthrProgramManagement/force-app/main/default/objects/PublicComplaint/fields/Emergency_Services_Involved__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Services_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates emergency services (police, fire, EMS) were involved. Automatically notifies Care Team and creates follow-up Tasks.</description>
    <inlineHelpText>Check if emergency services (police, fire, EMS) were called or responded.</inlineHelpText>
    <label>Emergency Services Involved</label>
    <type>Checkbox</type>
</CustomField>