tgthrProgramManagement/force-app/main/default/objects/PublicComplaint/fields/Incident_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Time__c</fullName>
    <description>Time of the incident.</description>
    <label>Incident Time</label>
    <type>Time</type>
</CustomField>