tgthrProgramManagement/force-app/main/default/objects/PublicComplaint/fields/Notify_Care_Team__c.field-meta.xml
<CustomField>
    <fullName>Notify_Care_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, bell notifications are sent to all Care Team members. Auto-set when Emergency Services Involved is checked.</description>
    <inlineHelpText>Notify the entire Care Team about this incident.</inlineHelpText>
    <label>Notify Care Team</label>
    <type>Checkbox</type>
</CustomField>