tgthrProgramManagement/force-app/main/default/objects/PublicComplaint/fields/Other_Staff_Present__c.field-meta.xml
<CustomField>
    <fullName>Other_Staff_Present__c</fullName>
    <description>Names of additional staff present during the incident.</description>
    <label>Other Staff Present</label>
    <length>250</length>
    <type>Text</type>
</CustomField>